[package]
name = "cachr"
version = "1.0.1"
edition = "2021"

description = "Simple shared access caching struct"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["utility", "optimization", "data-structures", "cache", "library"]
categories = ["caching", "data-structures"]
homepage = "https://crates.io/crates/cachr"
repository = "https://github.com/AlexanderHarrison/cachr"
documentation = "https://docs.rs/cachr/latest/cachr"

[dev-dependencies]
brunch = "0.5"
elsa = "1.9"

[[bench]]
name = "bench"
harness = false
